1. 使用特定ai对项目再次重构，使代码的风格更统一